@@ -1,3 +1,8 @@
+2009-02-10  Johannes Schmid  <jhs@gnome.org>
+
+	* gtksourceview/gtksourceview.c (update_current_line_color):
+	#570492 – Canot open editor - crash
+
 2009-02-05  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
 	* gtksourceview/language-specs/cobalt.xml:
